--- a/asos.codingstyle.android/app/src/main/res/values/strings.xml
+++ b/asos.codingstyle.android/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="action_settings">Settings</string>
     <string name="order_page_title">Order</string>
     <string name="title_activity_scan_barcode">Scan QR code</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="ok">OK</string>
+    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
+    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
+    <string name="action_scan_barcode">Scan barcode</string>
 </resources>
